// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar avatar displays correct image when their is an image 1`] = `
.c0 {
  border-radius: undefined%;
  overflow: hidden;
  width: 192em;
  height: 192em;
  background-image: url(https://tinyurl.com/49dba3d4);
  background-size: cover;
}

<div>
  <div
    class=" c0"
    size="64"
  />
</div>
`;

exports[`Avatar avatar displays correct initials when their is no image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: undefined;
  padding: 1em;
  width: 192em;
  height: 192em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.66em;
  color: #51575D;
  font-size: 64em;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="64"
  >
    <span
      class=" c1"
      size="64"
    />
  </div>
</div>
`;

exports[`Avatar avatar shape is correct 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 30%;
  background-color: undefined;
  padding: 1em;
  width: 9em;
  height: 9em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.66em;
  color: #51575D;
  font-size: 3em;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="3"
  >
    <span
      class=" c1"
      size="3"
    />
  </div>
</div>
`;

exports[`Avatar avatar size is correct 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: undefined;
  padding: 1em;
  width: 63em;
  height: 63em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.66em;
  color: #51575D;
  font-size: 21em;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="21"
  >
    <span
      class=" c1"
      size="21"
    />
  </div>
</div>
`;

exports[`Avatar matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: undefined;
  padding: 1em;
  width: 9em;
  height: 9em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.66em;
  color: #51575D;
  font-size: 3em;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="3"
  >
    <span
      class=" c1"
      size="3"
    />
  </div>
</div>
`;

exports[`Avatar matches snapshot Error State 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: undefined;
  padding: 1em;
  width: 192em;
  height: 192em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.66em;
  color: undefined;
  font-size: 128em;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="64"
  >
    <span
      class=" c1"
      color="#d00"
      size="128"
    >
      !
    </span>
  </div>
</div>
`;

exports[`Avatar matches snapshot Loading State 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: undefined;
  padding: 1em;
  width: 192em;
  height: 192em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.66em;
  color: #51575D;
  font-size: 64em;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="64"
  >
    <span
      class=" c1"
      size="64"
    />
  </div>
</div>
`;
